# RSS_parser

./: Dockerfile  README.md  celerybeat-schedule.db  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.dev.txt  requirements.txt
rss_handler/: admin.py  apps.py  forms.py  job_parser.py  models.py  process_rss.py  rss_handler.py  views.py
rss_handler/management/commands/: fetchrss.py
rss_handler/migrations/: 0001_initial.py
sales_app/: celery.py  settings.py  urls.py
sending_messages/: apps.py  fibery.py  google_chat.py  gpt_api.py  paeser_for_fibery.py  queryFibery.gql  sticker_list.py  telegram_bot.py  views.py
static/css/: dashboard_style.css  footer.css  header.css  login.css  manage_rss_feeds.css
static/js/: dashboard.js
templates/: footer.html  header.html  manage_rss_feeds.html
templates/admin/: dashboard.html  login.html
tests/: test_google_chat.py  test_rss_handler.py  test_telegram_bot.py
