[tool.poetry]
name = "sales-server"
version = "0.1.0"
description = "Django Initial sales_app"
authors = ["Aleksander Kotov <aleksander@djangoheads.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.2"
sentry-sdk = "^1.25.1"
gunicorn = "^20.1.0"
requests = "^2.31.0"
pre-commit = "^3.5.0"
celery = {extras = ["redis"], version = "^5.3.6"}
feedparser = "^6.0.10"
redis = "^5.0.1"
psycopg2-binary = "^2.9.9"
platformdirs = "^4.0.0"
flower = "^2.0.1"
beautifulsoup4 = "^4.12.2"
pytelegrambotapi = "^4.14.0"
httplib2 = "^0.22.0"
openai = "^1.3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.2"
pre-commit = "^3.3.2"
pytest-sugar = "^0.9.7"
pytest-cov = "^4.1.0"
pytest-timeout = "^2.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
autoflake = "^2.1.1"
mccabe = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["src/service", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "src"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.log
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--timeout=0.01"
testpaths = [
    "tests"
]